objects/Pardot_setting__mdt.object
<CustomObject>
    <fields>
        <fullName>From_MA_process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From MA process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordTypeText__c</fullName>
        <label>RecordTypeText</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_With__c</fullName>
        <label>Share With</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Pardot setting</label>
    <pluralLabel>Pardot Settings</pluralLabel>
</CustomObject>